--- a/src/style.css
+++ b/src/style.css
@@ -1,113 +1,173 @@
-body {
-  font-family: Arial, Helvetica, sans-serif;
+.heading {
+  color: white;
+  font-weight: bold;
+  padding-bottom: 100px;
+    
+  }
+.min{
+  color: rgba(0, 0, 0, 0.5);
 }
 
-h1 {
-  color: #EC6E4C;
-  font-size: 24px;
-  font-weight: 700;
-  line-height: 28px;
-  margin-bottom: 0;
-}
-
-ul{
-  margin: 0;
-  padding: 0;
-}
-li {
-  list-style: none;
-  color: #878787;
-  font-size: 16px;
-  font-weight: 100;
-  line-height: 19px;
-}
-li:first-letter {
-  text-transform: capitalize;
-}
-a {
-  text-decoration: none;
-  color: #17a2b8;
-}
-a:hover{
-  text-decoration: underline;
-  color: #17a2b8;
-}
-.weather-wrapper {
-  max-width: 600px;
-  margin: 30px auto;
-}
-.weather-app {
-   padding: 20px;
-   border: 1px solid #dadde1;
-   border-radius: 5px;
-}
-.overview {
-  margin-bottom: 20px;
-}
-
-.weather-temperature img {
-  margin-right: 5px;
-  height: 64px;
-  width: 64px;
-}
-
-.weather-temperature strong {
-  font-size: 60px;
-  font-weight: 400;
-  line-height: 1;
-}
-
-.weather-temperature .units {
-  position: relative;
-  font-size: 16px;
-  top: -34px;
-
-}
-
-.weather-temperature .active {
-  color: #878787;
-  cursor: default;
-}
-.weather-temperature .active:hover {
-  text-decoration: none;
-}
-
-#search-button {
-  color:#fff;
-  background-color: #17a2b8;
-}
-#current-button {
-  color: #17a2b8;
-  font-size: 12px;
-}
-.card {
-  margin: 50px 0 5px 0;
-}
-.card-header {
+.start {
+  
+  max-width: 650px;
+  margin: 0 auto;
+  color: 282a36;
   text-align: center;
-  font-size: 20px;
-  font-weight: 700;
+  padding: 50px;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  font-size: 19px;
 }
+
+.container {
+background: radial-gradient(circle at 12.3% 19.3%,
+      rgb(85, 88, 218) 0%,
+      rgb(95, 209, 249) 100.2%);
+  border: rgb(85, 88, 218) 0%;
+  border-radius: 20px;
+  box-shadow: 5px 6px 5px rgba(0, 0, 0, 0.2);
+}
+
+.search {
+  padding: 42px;
+  display: block;
+  margin: 34px;
+  text-align: center;
+  width: 100%;
+  box-shadow: 3px 3px 2px rgba(0, 0, 0, 0.1);
+}
+
+.containerone {
+  padding: 31px 31px;
+}
+
+.containertwo {
+  padding: 31px 31px;
+}
+
+.weather {
+  background: linear-gradient(-225deg, #5d9fff 0%, #b8dcff 48%, #6bbbff 100%);
+  block-size: 200px;
+  border: 2px white solid;
+  border-radius: 25px;
+}
+#weather-five{
+  display: flex;
+  justify-content: space-around;
+}
+.emoji {
+  font-size: 35px;
+  display: inline;
+}
+
+.temperature {
+  font-size: 35px;
+  display: inline;
+}
+
+.first {
+  position: relative;
+  left: 190px;
+  bottom: 50px;
+  background: linear-gradient(-225deg, #5d9fff 0%, #b8dcff 48%, #6bbbff 100%);
+    max-width: 150px;
+    text-align: center;
+    max-height: 200px;
+    border: 2px white dotted;
+    border-radius: 10px;   
+    box-shadow: 5px 6px 5px rgba(0, 0, 0, 0.2);
+}
+.first:hover {
+  cursor: pointer;
+  transform: scale(1.05);
+}
+
+.second {
+  position: relative;
+  right: 185px;
+  top: -180px;
+  background: linear-gradient(-225deg, #5d9fff 0%, #b8dcff 48%, #6bbbff 100%);
+    max-width: 150px;
+    padding: 40px 25px 40px 25px;
+    text-align: center;
+        max-height: 200px;
+    border: 2px white solid;
+    border-radius: 10px;
+    text-align: center;
+    box-shadow: 5px 6px 5px rgba(0, 0, 0, 0.2);
+}
+
+.third {
+  position: relative;
+  right: -181px;
+  top: -380px;
+  font-size: 30px;
+  background: linear-gradient(-225deg, #5d9fff 0%, #b8dcff 48%, #6bbbff 100%);
+    max-width: 150px;
+padding: 60px;
+text-align: center;
+        max-height: 200px;
+        padding: 30px 25px 30px 25px;
+    border: 2px white solid;
+    border-radius: 10px;
+    box-shadow: 5px 6px 5px rgba(0, 0, 0, 0.2);
+}
+
+
 .day {
   font-size: 20px;
-  font-weight: 700;
-  color: #17A2B8;
- 
 }
-#day-icon{
-  height: 64px;
-  width: 64px;
-  margin: -5px;
+
+.date {
+  font-size: 15px;
 }
-.temp-high{
-  font-size: 18px;
+
+.icon {
+  font-size: 25px;
 }
-.temp-low {
-  color: #EC6E4C;
+
+.temp {
+  font-size: 15px;
+}
+
+.wed {
+  position: relative;
+  right: 95px;
+  top: -82px;
+}
+
+.Thurs {
+  position: relative;
+  right: -1px;
+  top: -194px;
+}
+
+.Fri {
+  position: relative;
+  right: -95px;
+  top: -307px;
+}
+
+.Sat {
+  position: relative;
+  right: -190px;
+  top: -420px;
+}
+
+.active {
+color: black;
+cursor: default;
+text-decoration: none;
+
+}
+.active:hover {
+ text-decoration: none;
+
+}
+.units {
   font-size: 14px;
-  opacity: 0.5;
 }
-.container {
-    width: 100%;
-    height: auto;
+
+#description{
+  text-transform: capitalize;
 }
