--- a/src/style.css
+++ b/src/style.css
@@ -13,12 +13,15 @@ a:-webkit-any-link {
   text-decoration: none;
 }
 
-
 body {
-  background: #4B0082;
+  background: radial-gradient(
+    circle at 10% 20%,
+    rgb(192, 192, 192) 0%,
+    rgb(228, 99, 99)100.2%
+  );
   display: block;
   margin: 0;
-};
+}
 
 .app {
   display: block;
@@ -63,7 +66,7 @@ body {
 }
 
 .icons a {
-  color: #ec8ab9;
+  color: #ADD8E6;
   font-size: 12px;
   margin-bottom: 40px;
 }
