--- a/src/style.css
+++ b/src/style.css
@@ -15,8 +15,6 @@ a:-webkit-any-link {
 
 body {
   color: rgba(39, 33, 66, 0.4); 
-  
-  
 }
 
 .app {
@@ -90,7 +88,7 @@ body {
 
 .weather {
   font-family: "Cerebri-Sans", Helvetica, Arial, sans-serif;
-  background: #fefcf1;
+  background: #0d6efd;
   border-radius: 16px;
   box-shadow: 0px 30px 50px rgba(65, 50, 100, 0.08);
   box-sizing: border-box;
