--- a/src/style.css
+++ b/src/style.css
@@ -88,11 +88,11 @@ body {
 
 .weather {
   font-family: "Cerebri-Sans", Helvetica, Arial, sans-serif;
-  background: #0d6efd;
+  background: #c4c4c2;
   border-radius: 16px;
   box-shadow: 0px 30px 50px rgba(65, 50, 100, 0.08);
   box-sizing: border-box;
-  display: block;
+  display: circle;
   padding: 40px;
   color: rgb(135, 135, 135);
 }
