--- a/src/style.css
+++ b/src/style.css
@@ -14,6 +14,7 @@ a:-webkit-any-link {
 }
 
 body {
+  background: #0d6efd;  
   color: rgba(39, 33, 66, 0.4); 
 }
 
@@ -92,7 +93,7 @@ body {
   border-radius: 16px;
   box-shadow: 0px 30px 50px rgba(65, 50, 100, 0.08);
   box-sizing: border-box;
-  display: circle;
+  display: block;
   padding: 40px;
   color: rgb(135, 135, 135);
 }
