--- a/src/style.css
+++ b/src/style.css
@@ -134,6 +134,16 @@ body {
   color: #3A3A3A;
 }
 
+.weather .btn {
+  background: rgb(89, 120, 212);
+  color: rgb(75, 75, 75);
+  font-weight: bold;
+  font-size: 16px;
+  padding: 15px 0;
+  border: none;
+  height: 50px;
+  cursor: pointer;
+} 
 .weather .btn:hover {
   background: #f1a5cf;
 }
