--- a/src/style.css
+++ b/src/style.css
@@ -252,3 +252,16 @@ li {
   display: block;
   margin: 20px auto;
 }   
+.icons {
+  font-size: 18px; 
+  color: #f7f8f8; 
+}
+
+.icons a {
+  font-size: inherit;
+  color: #70dcdc; 
+}
+
+.icons a:hover {
+  color: rgb(188, 19, 194);
+}
